--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,7 @@ Imports:
     R6 (== 2.5.1),
     later (== 1.3.2),
     rlang (== 1.1.4),
-    assertthat (== 0.2.1)
+    assertthat (== 0.2.1),
+    glue (== 1.7.0),
+    jsonlite (== 1.8.8),
 RoxygenNote: 7.3.2
